--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Webpack configuration for hdbt Drupal 9 theme",
   "author": "Druid",
   "license": "MIT",
-  "repository": "github:druidfi/PROJECT",
+  "repository": "github:City-of-Helsinki/drupal-hdbt",
   "scripts": {
     "dev": "webpack --progress --mode development --config  webpack.config.dev.js --watch",
     "build": "webpack -p --progress --mode production --config webpack.config.build.js",
-    "postinstall": "find node_modules/ -name \"*.info\" -type f -delete"
+    "postinstall": "cp -r node_modules/helsinki-design-system/packages/core/src/svg/ src/icons/hds && find node_modules/ -name \"*.info\" -type f -delete"
   },
   "browserslist": [
     "last 2 versions",
@@ -20,7 +20,7 @@
     "@babel/core": "^7.10.3",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/preset-env": "^7.10.3",
-    "autoprefixer": "^9.8.1",
+    "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-minify-webpack-plugin": "^0.3.1",
@@ -31,19 +31,33 @@
     "csscomb": "4.2.0",
     "es6-promise": "^4.1.1",
     "eslint": "5.7.0",
-    "eslint-config-airbnb-base": "13.1.0",
     "eslint-config-drupal-bundle": "^1.0.2",
     "eslint-import-resolver-webpack": "0.10.1",
     "eslint-plugin-import": "2.14.0",
     "expose-loader": "^0.7.5",
     "file-loader": "^2.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "hds-design-tokens": "^0.14.0",
+    "helsinki-design-system": "https://github.com/City-of-Helsinki/helsinki-design-system/archive/master.tar.gz",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^0.4.1",
     "node-sass": "^4.14.1",
-    "postcss-loader": "^3.0.0",
+    "node-sass-glob-importer": "^5.3.2",
+    "normalize.css": "^8.0.1",
+    "postcss": "^8.1",
+    "postcss-combine-media-query": "^1.0.1",
+    "postcss-easy-import": "^3.0.0",
+    "postcss-extend": "^1.0.5",
+    "postcss-import": "^13.0.0",
+    "postcss-import-ext-glob": "^1.1.0",
+    "postcss-loader": "^4.0.4",
+    "postcss-nested": "^5.0.1",
+    "postcss-nesting": "^7.0.1",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-scss": "^3.0.2",
+    "postcss-strip-inline-comments": "^0.1.5",
     "sass-loader": "^8.0.0",
     "svg-inline-loader": "^0.8.0",
     "svg-spritemap-webpack-plugin": "^3.5.6",
@@ -56,8 +70,6 @@
   },
   "dependencies": {
     "glob": "^7.1.6",
-    "modernizr": "^3.11.2",
-    "node-sass-glob-importer": "^5.3.0",
-    "normalize.css": "^8.0.0"
+    "modernizr": "^3.11.2"
   }
 }
