UHF-100: Missing runs-on

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,7 +2,7 @@ on: [push]
 name: Lint
 jobs:
   lint:
-
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: setup-node@v1
