--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: setup-node@v1
+      - uses: actions/setup-node@v1
         with:
           node-version: $(cat .nvmrc)
 
