--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,3 +18,6 @@ jobs:
         run: |
           npm i
           npx husky i
+
+      - name: Run JS linter
+        run: ./node_modules/eslint/bin/eslint.js src/js/*.js
