UHF-100: Package assets manually

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
           npm i
           npm run build
           npm run postinstall
+          zip latest.zip *.json dist/ *.theme *.yml *.md *.png templates/
+          tar -zcf latest.tar.gz *.json dist/ *.theme .yml *.md *.png templates/
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -27,11 +29,5 @@ jobs:
           prerelease: false
           title: "Latest version"
           files: |
-            *.json
-            dist/
-            *.theme
-            *.yml
-            *.md
-            *.png
-            templates/
-
+            latest.zip
+            latest.tar.gz
