Added HDBT Custom blocks module to support custom blocks in HDBT.

--- a/hdbt.info.yml
+++ b/hdbt.info.yml
@@ -4,8 +4,26 @@ type: theme
 base theme: stable9
 tags: sub-theme
 core_version_requirement: ^8 || ^9
+dependencies:
+  - hdbt_custom_blocks
 
-# Define Libraries
+# Regions
+regions:
+  header_top: Header - Top
+  header_bottom: Header - Bottom
+  messages: Messages
+  tools: Tools
+  breadcrumb: Breadcrumb
+  sidebar_first: First sidebar
+  sidebar_second: Second sidebar
+  before_content: Before content
+  content: Content
+  after_content: After content
+  before_footer: Before footer
+  footer_top: Footer - Top
+  footer_bottom: Footer - Bottom
+
+# Libraries
 libraries:
   - hdbt/global-styling
   - hdbt/global-scripting
