Updated block order in HDBT.

--- a/config/install/block.block.hdbt_local_tasks.yml
+++ b/config/install/block.block.hdbt_local_tasks.yml
@@ -5,7 +5,7 @@ dependencies:
     - hdbt
 id: hdbt_local_tasks
 theme: hdbt
-region: content
+region: before_content
 weight: -20
 provider: null
 plugin: local_tasks_block
