--- a/config/install/block.block.hdbt_messages.yml
+++ b/config/install/block.block.hdbt_messages.yml
@@ -7,8 +7,8 @@ dependencies:
     - hdbt
 id: hdbt_messages
 theme: hdbt
-region: highlighted
-weight: 0
+region: messages
+weight: -3
 provider: null
 plugin: system_messages_block
 settings:
