--- a/config/install/block.block.footertopnavigation.yml
+++ b/config/install/block.block.footertopnavigation.yml
@@ -4,7 +4,7 @@ dependencies:
   config:
     - system.menu.footer-top-navigation
   module:
-    - system
+    - menu_block_current_language
   theme:
     - hdbt
 id: footertopnavigation
@@ -12,11 +12,11 @@ theme: hdbt
 region: footer_top
 weight: 0
 provider: null
-plugin: 'system_menu_block:footer-top-navigation'
+plugin: 'menu_block_current_language:footer-top-navigation'
 settings:
-  id: 'system_menu_block:footer-top-navigation'
+  id: 'menu_block_current_language:footer-top-navigation'
   label: 'Footer top navigation'
-  provider: system
+  provider: menu_block_current_language
   label_display: visible
   level: 1
   depth: 1
