Added HDBT Hyphenopoly module; including the Hyphenopoly library and settings for the HDBT theme.

--- a/package.json
+++ b/package.json
@@ -8,28 +8,27 @@
   "scripts": {
     "dev": "webpack --progress --mode development --config  webpack.config.dev.js --watch",
     "build": "webpack -p --progress --mode production --config webpack.config.build.js",
-    "postinstall": "cp -r node_modules/helsinki-design-system/packages/core/src/svg/ src/icons/hds",
+    "postinstall": "npx husky & cp -r node_modules/helsinki-design-system/packages/core/src/svg/ src/icons/hds",
     "lint": "lint-staged",
     "lint:js": "eslint --fix src/"
   },
   "devDependencies": {
     "css-declaration-sorter": "^6.0.2",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.2",
-    "postcss-cli": "^8.3.0",
+    "lint-staged": "^10.5.3",
+    "postcss-cli": "^8.3.1",
     "pre-commit": "^1.2.2"
   },
   "dependencies": {
-    "@babel/core": "^7.12.8",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
-    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-env": "^7.12.11",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-minify-webpack-plugin": "^0.3.1",
     "breakpoint-sass": "^2.7.1",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^6.3.2",
+    "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^1.0.0",
     "es6-promise": "^4.1.1",
     "eslint": "5.7.0",
@@ -45,34 +44,36 @@
     "helsinki-design-system": "https://github.com/City-of-Helsinki/helsinki-design-system/archive/master.tar.gz",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.3.6",
+    "hyphenopoly": "^4.9.0",
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^0.4.1",
-    "modernizr": "^3.11.2",
+    "modernizr": "^3.11.4",
     "node-sass": "^4.14.1",
     "node-sass-glob-importer": "^5.3.2",
     "normalize.css": "^8.0.1",
-    "postcss": "^8.1.10",
+    "postcss": "^8.2.2",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-easy-import": "^3.0.0",
     "postcss-extend": "^1.0.5",
     "postcss-import": "^13.0.0",
     "postcss-import-ext-glob": "^1.1.0",
     "postcss-loader": "^4.1.0",
-    "postcss-nested": "^5.0.1",
+    "postcss-nested": "^5.0.3",
     "postcss-nesting": "^7.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-scss": "^3.0.2",
     "postcss-strip-inline-comments": "^0.1.5",
-    "prettier": "^2.2.0",
+    "prettier": "^2.2.1",
     "sass-loader": "^8.0.0",
     "svg-inline-loader": "^0.8.0",
-    "svg-spritemap-webpack-plugin": "^3.7.1",
+    "svg-spritemap-webpack-plugin": "^3.8.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-fix-style-only-entries": "^0.4.0",
     "webpack-merge": "^4.1.4",
     "webpack-modernizr-loader": "^4.0.1",
-    "webpack-notifier": "^1.10.1"
+    "webpack-notifier": "^1.12.0"
   },
   "husky": {
     "hooks": {
