--- a/config/install/block.block.header_top_buttons.yml
+++ b/config/install/block.block.header_top_buttons.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies:
   module:
-    - hdbt_custom_blocks
+    - hdbt_content
   theme:
     - hdbt
 id: header_top_buttons
@@ -14,6 +14,6 @@ plugin: header_top_buttons_block
 settings:
   id: header_top_buttons_block
   label: 'Header Top buttons'
-  provider: hdbt_custom_blocks
+  provider: hdbt_content
   label_display: '0'
 visibility: {  }
