--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "sass-loader": "^8.0.0",
     "svg-inline-loader": "^0.8.0",
     "svg-spritemap-webpack-plugin": "^3.8.2",
+    "tiny-slider": "^2.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-fix-style-only-entries": "^0.4.0",
