--- a/config/install/block.block.hdbt_page_title.yml
+++ b/config/install/block.block.hdbt_page_title.yml
@@ -1,6 +1,8 @@
 langcode: en
 status: true
 dependencies:
+  module:
+    - ctools
   theme:
     - hdbt
 id: hdbt_page_title
@@ -14,4 +16,11 @@ settings:
   label: 'Page title'
   provider: core
   label_display: '0'
-visibility: {  }
+visibility:
+  'entity_bundle:node':
+    id: 'entity_bundle:node'
+    bundles:
+      unit: unit
+    negate: true
+    context_mapping:
+      node: '@node.node_route_context:node'
