UHF-1090: Added basic theming for the service content type.

--- a/config/install/block.block.hdbt_page_title.yml
+++ b/config/install/block.block.hdbt_page_title.yml
@@ -21,6 +21,7 @@ visibility:
     id: 'entity_bundle:node'
     bundles:
       unit: unit
+      service: service
     negate: true
     context_mapping:
       node: '@node.node_route_context:node'
