--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "handorgel": "^0.5.0",
     "hds-core": "^0.17",
     "hds-design-tokens": "^0.17",
-    "helsinki-design-system": "https://github.com/City-of-Helsinki/helsinki-design-system/archive/master.tar.gz",
+    "helsinki-design-system": "https://github.com/City-of-Helsinki/helsinki-design-system/archive/refs/tags/v0.24.0.tar.gz",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^5.0.9",
@@ -73,7 +73,7 @@
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.0",
     "svg-inline-loader": "^0.8.0",
-    "svg-spritemap-webpack-plugin": "^3.9.0",
+    "svg-spritemap-webpack-plugin": "^3.9.1",
     "tiny-slider": "^2.9.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
