UHF-1036: Customized Drupal throbber to use hds-throbber

--- a/hdbt.info.yml
+++ b/hdbt.info.yml
@@ -26,5 +26,10 @@ libraries:
   - hdbt/global-styling
   - hdbt/global-scripting
 
+# Libraries extend
+libraries-extend:
+  core/drupal.ajax:
+    - hdbt/throbber
+
 ckeditor_stylesheets:
   - dist/css/ckeditor.min.css
