UHF-1280: Finalize styling for the sidebar menu, add javascript functionality to show and hide elements with a button icon

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -61,6 +61,11 @@ throbber:
     - core/jquery
     - core/drupal
 
+menu-toggle:
+  version: 1.x
+  js:
+    dist/js/menu-toggle.min.js: {}
+
 global-styling:
   version: 1.x
   css:
