Move hdbt under contrib

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "drupal/hdbt",
-  "type": "drupal-custom-theme",
+  "type": "drupal-theme",
   "description": "Helsinki Drupal Base theme",
   "keywords": ["Drupal"],
   "license": "GPL-2.0+",
