Add new region header_branding and point current header_top styles to there, remove unused header top buttons block

--- a/config/install/block.block.language_switcher.yml
+++ b/config/install/block.block.language_switcher.yml
@@ -7,7 +7,7 @@ dependencies:
     - hdbt
 id: language_switcher
 theme: hdbt
-region: header_top
+region: header_branding
 weight: 0
 provider: null
 plugin: 'language_block:language_content'
