--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -77,7 +77,7 @@ mmenu:
 mmenu-config:
   version: 8.5.21
   js:
-    dist/js/mmenu-config.js: {}
+    dist/js/mmenu-config.min.js: {}
   dependencies:
     - hdbt/mmenu
 
