UHF-1592: Updated cookie compliance block.

--- a/config/install/block.block.eucookiecomplianceblock.yml
+++ b/config/install/block.block.eucookiecomplianceblock.yml
@@ -2,15 +2,14 @@ langcode: en
 status: true
 dependencies:
   module:
-    - ctools
     - eu_cookie_compliance
     - system
   theme:
     - hdbt
 id: eucookiecomplianceblock
 theme: hdbt
-region: after_content
-weight: -5
+region: content
+weight: 10
 provider: null
 plugin: eu_cookie_compliance_block
 settings:
@@ -23,14 +22,7 @@ settings:
       value: ''
       format: full_html
 visibility:
-  'entity_bundle:node':
-    id: 'entity_bundle:node'
-    bundles:
-      page: page
-    negate: false
-    context_mapping:
-      node: '@node.node_route_context:node'
   request_path:
     id: request_path
-    pages: /node/1
+    pages: /cookie-information-and-settings
     negate: false
