UHF-910: Add new region where you can add attachement blocks that only provide library but need to be added using a block for example

--- a/hdbt.info.yml
+++ b/hdbt.info.yml
@@ -21,6 +21,7 @@ regions:
   before_footer: Before footer
   footer_top: Footer - Top
   footer_bottom: Footer - Bottom
+  attachments: Attachments
 
 # Libraries
 libraries:
