--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "hdbt",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Webpack configuration for hdbt Drupal 9 theme",
   "author": "Druid",
   "license": "MIT",
   "repository": "github:City-of-Helsinki/drupal-hdbt",
   "scripts": {
-    "dev": "webpack --progress --mode development --config  webpack.config.dev.js --watch",
-    "build": "webpack -p --progress --mode production --config webpack.config.build.js",
+    "dev": "webpack --progress --mode=development --config  webpack.config.dev.js --watch",
+    "build": "webpack --progress --mode=production --config webpack.config.build.js",
     "postinstall": "husky install & cp -r node_modules/helsinki-design-system/packages/core/src/svg/ src/icons/hds",
     "lint": "lint-staged",
     "lint:js": "eslint --fix src/"
@@ -16,6 +16,7 @@
     "@babel/core": "^7.14.3",
     "@babel/plugin-syntax-dynamic-import": "7.0.0",
     "@babel/preset-env": "^7.14.4",
+    "@nuxt/friendly-errors-webpack-plugin": "^2.5.1",
     "@sideway/address": "^4.1.2",
     "@sideway/formula": "^3.0.0",
     "@sideway/pinpoint": "^2.0.0",
@@ -23,21 +24,18 @@
     "autoprefixer": "^10.2.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "babel-minify-webpack-plugin": "^0.3.1",
     "breakpoint-sass": "^2.7.1",
     "chokidar": "^3.5.1",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^6.4.1",
     "css-declaration-sorter": "^6.0.3",
-    "css-loader": "^1.0.0",
+    "css-loader": "^5.2.6",
     "es6-promise": "^4.1.1",
     "eslint": "5.7.0",
     "eslint-config-drupal-bundle": "^1.0.2",
     "eslint-import-resolver-webpack": "0.10.1",
     "eslint-plugin-import": "^2.23.4",
-    "expose-loader": "^0.7.5",
-    "file-loader": "^2.0.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
+    "expose-loader": "^3.0.0",
     "fsevents": "^2.3.2",
     "glob": "^7.1.7",
     "handorgel": "^0.5.0",
@@ -45,17 +43,16 @@
     "hds-design-tokens": "^0.17",
     "helsinki-design-system": "https://github.com/City-of-Helsinki/helsinki-design-system/archive/refs/tags/v0.25.0.tar.gz",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.3.2",
     "husky": "^5.0.9",
     "hyphenopoly": "^4.10.0",
-    "image-webpack-loader": "^7.0.1",
     "joi": "^17.4.0",
     "lint-staged": "^10.5.4",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^1.6.0",
     "mmenu-js": "^8.5.23",
-    "modernizr": "^3.11.4",
     "node-sass": "^4.14.1",
     "node-sass-glob-importer": "^5.3.2",
+    "normalize-url": "^6.1.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.3.0",
     "postcss-cli": "^8.3.1",
@@ -72,15 +69,15 @@
     "postcss-strip-inline-comments": "^0.1.5",
     "pre-commit": "^1.2.2",
     "prettier": "^2.3.0",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^11.0.1",
     "svg-inline-loader": "^0.8.0",
-    "svg-spritemap-webpack-plugin": "^3.9.1",
+    "svg-spritemap-webpack-plugin": "^4.0.3",
+    "terser-webpack-plugin": "^5.1.3",
     "tiny-slider": "^2.9.3",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-fix-style-only-entries": "^0.4.0",
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-remove-empty-scripts": "^0.7.1",
     "webpack-merge": "^4.1.4",
-    "webpack-modernizr-loader": "^4.0.1",
     "webpack-notifier": "^1.13.0"
   },
   "lint-staged": {
