--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "fsevents": "^2.3.2",
     "glob": "^7.1.7",
     "handorgel": "^0.5.0",
-    "hds-core": "^0.17",
-    "hds-design-tokens": "^0.17",
-    "helsinki-design-system": "https://github.com/City-of-Helsinki/helsinki-design-system/archive/refs/tags/v0.25.0.tar.gz",
+    "hds-core": "^1.2.0",
+    "hds-design-tokens": "^1.2.0",
+    "helsinki-design-system": "https://github.com/City-of-Helsinki/helsinki-design-system/archive/refs/tags/v1.2.0.tar.gz",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^5.0.9",
@@ -76,9 +76,9 @@
     "tiny-slider": "^2.9.3",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
-    "webpack-remove-empty-scripts": "^0.7.1",
     "webpack-merge": "^4.1.4",
-    "webpack-notifier": "^1.13.0"
+    "webpack-notifier": "^1.13.0",
+    "webpack-remove-empty-scripts": "^0.7.1"
   },
   "lint-staged": {
     "src/scss/**/*.scss": [
