UHF-885: Fixed override popup for cookie compliance banner.

--- a/modules/hdbt_content/hdbt_content.routing.yml
+++ b/modules/hdbt_content/hdbt_content.routing.yml
@@ -5,3 +5,5 @@ hdbt_content.cookie_consent:
     _title: 'Cookie settings'
   requirements:
     _permission: 'access content'
+  options:
+    no_cache: 'TRUE'
