--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "css-declaration-sorter": "^6.0.3",
     "css-loader": "^5.2.6",
     "es6-promise": "^4.1.1",
-    "eslint": "5.16.0",
+    "eslint": "^7.32.0",
     "eslint-config-drupal-bundle": "^1.0.2",
     "eslint-import-resolver-webpack": "0.13.1",
     "eslint-plugin-import": "^2.23.4",
@@ -45,12 +45,11 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^5.0.9",
-    "hyphenopoly": "^4.10.0",
     "joi": "^17.4.0",
     "lint-staged": "^10.5.4",
     "mini-css-extract-plugin": "^1.6.2",
     "mmenu-js": "^8.5.23",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "node-sass-glob-importer": "^5.3.2",
     "normalize-url": "^6.1.0",
     "normalize.css": "^8.0.1",
