--- a/config/install/block.block.footertopnavigation.yml
+++ b/config/install/block.block.footertopnavigation.yml
@@ -15,7 +15,7 @@ provider: null
 plugin: 'menu_block_current_language:footer-top-navigation'
 settings:
   id: 'menu_block_current_language:footer-top-navigation'
-  label: 'Footer top navigation'
+  label: 'City of Helsinki'
   provider: menu_block_current_language
   label_display: visible
   translation_providers:
