--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -99,3 +99,20 @@ global-scripting:
     dist/js/branding-mobile.min.js: {}
   dependencies:
     - core/drupal
+
+siteimprove:
+  version: 1.x
+  js:
+    'https://siteimproveanalytics.com/js/siteanalyze_6047173.js': {
+      type: external,
+      minified: true,
+      attributes: {
+        async: true
+      }
+    }
+
+matomo:
+  version: 1.x
+  header: true
+  js:
+    dist/js/matomo.min.js: {}
