Clean src/icons/hds folder before copying the icons.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "webpack --progress --mode=development --config  webpack.config.dev.js --watch",
     "build": "webpack --progress --mode=production --config webpack.config.build.js",
-    "postinstall": "husky install & cp -r node_modules/helsinki-design-system/packages/core/src/svg/ src/icons/hds",
+    "postinstall": "husky install & rm -rf src/icons/hds && cp -r node_modules/helsinki-design-system/packages/core/src/svg/ src/icons/hds",
     "lint": "lint-staged",
     "lint:js": "eslint --fix src/"
   },
