--- a/hdbt.info.yml
+++ b/hdbt.info.yml
@@ -4,6 +4,8 @@ type: theme
 base theme: stable9
 tags: sub-theme
 core_version_requirement: ^8 || ^9
+'interface translation project': hdbt
+'interface translation server pattern': themes/contrib/hdbt/translations/%language.po
 
 # Regions
 regions:
