--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "webpack --progress --mode=development --config  webpack.config.dev.js --watch",
     "build": "webpack --progress --mode=production --config webpack.config.build.js",
-    "postinstall": "husky install & rm -rf src/icons/hds && cp -r node_modules/helsinki-design-system/packages/core/src/svg/ src/icons/hds",
+    "postinstall": "husky install",
     "lint": "lint-staged",
     "lint:js": "eslint --fix src/"
   },
@@ -39,12 +39,12 @@
     "handorgel": "^0.5.0",
     "hds-core": "^1.2.0",
     "hds-design-tokens": "^1.2.0",
-    "helsinki-design-system": "https://github.com/City-of-Helsinki/helsinki-design-system/archive/refs/tags/v1.7.1.tar.gz",
     "html-loader": "^3.0.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.0",
     "joi": "^17.4.0",
     "lint-staged": "^12.0.0",
+    "md5-file": "^5.0.0",
     "mini-css-extract-plugin": "^1.6.2",
     "mmenu-js": "^8.5.23",
     "normalize.css": "^8.0.1",
