UHF-3635: Modified .hdbtconfig.json to have new file for the old ui-icons.json (editor-selectable-icons.json)

--- a/.hdbtconfig.json
+++ b/.hdbtconfig.json
@@ -1,4 +1,3 @@
 {
-  "pathToIconSprite": "/dist/icons/sprite.svg",
-  "pathToIconJson": "/src/icons/ui-icons.json"
+  "pathToIconJson": "/src/icons/editor-selectable-icons.json"
 }
