UHF-3635: Refactor SVG sprite creation tool.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "babel-loader": "^8.2.2",
     "breakpoint-sass": "^2.7.1",
     "chokidar": "^3.5.1",
-    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^10.0.0",
     "css-declaration-sorter": "^6.0.3",
     "css-loader": "^6.5.0",
@@ -44,6 +43,7 @@
     "husky": "^7.0.0",
     "joi": "^17.4.0",
     "lint-staged": "^12.0.0",
+    "md5": "^2.3.0",
     "md5-file": "^5.0.0",
     "mini-css-extract-plugin": "^1.6.2",
     "mmenu-js": "^8.5.23",
@@ -66,7 +66,7 @@
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "svg-inline-loader": "^0.8.0",
-    "svg-spritemap-webpack-plugin": "^4.3.3",
+    "svg-sprite": "^1.5.3",
     "tiny-slider": "^2.9.3",
     "webpack": "^5.56.2",
     "webpack-cli": "^4.7.2",
