UHF-3635: Removed hds styles from styles.scss and moved the styles to separate hds.min.css file. Removed HDS icon styles from _hds.scss.

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -103,6 +103,7 @@ global-styling:
   version: 1.x
   css:
     theme:
+      dist/css/hds.min.css: {}
       dist/css/styles.min.css: {}
   dependencies:
     - hdbt/color-palette
