--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "svg-inline-loader": "^0.8.0",
-    "svg-sprite": "^1.5.3",
+    "svg-sprite": "github:City-of-Helsinki/svg-sprite#UHF-3635-fix-icon-stack-viewbox-on-v1.5.3",
     "tiny-slider": "^2.9.3",
     "webpack": "^5.56.2",
     "webpack-cli": "^4.7.2",
