UHF-4455: UHF-3454 Add first version of tabs to high school search paragraph

--- a/hdbt.libraries.yml
+++ b/hdbt.libraries.yml
@@ -133,3 +133,8 @@ closable_announcements:
   - core/jquery
   - core/drupal
   - core/drupalSettings
+
+tabs:
+  version: 1.x
+  js:
+    dist/js/tabs.min.js: {}
