UHF-4235: Added custom webpack compiler hook for creating similar icons file for [data-selected-icon] attributes as there are for hdbt/hel icons. Added the ckeditor-icons.css to ckeditor import array and extended the hdbt-icons styles for the [data-selected-icon].

--- a/hdbt.info.yml
+++ b/hdbt.info.yml
@@ -39,3 +39,4 @@ ckeditor_stylesheets:
   - dist/css/ckeditor.min.css
   - dist/css/hds.min.css
   - dist/css/hdbt-icons.css
+  - dist/css/ckeditor-icons.css
